// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/store/View/ViewButton default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      type="button"
    >
      <span
        class="pi pi-list p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        Aucune vue. Merci d'en créer une.
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/store/View/ViewButton overlay opened 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      type="button"
    >
      <span
        class="pi pi-list p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        Aucune vue. Merci d'en créer une.
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`storyshots components/store/View/ViewButton overlay opened with views 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-overlay-panel"
  >
    <button
      class="p-button p-component p-button-outlined p-button-secondary"
      type="button"
    >
      <span
        class="pi pi-list p-button-icon p-button-icon-left"
      />
       
      <span
        class="p-button-label"
      >
        First view
      </span>
       
      <!---->
      <span
        class="p-ink"
      />
    </button>
     
    <!---->
  </div>
</div>
`;
